Fixing wave alignment issue

--- a/public/styles/sass/_home.scss
+++ b/public/styles/sass/_home.scss
@@ -112,7 +112,7 @@
     display: flex;
     align-items: flex-end;
     overflow-y: hidden;
-
+    justify-content: flex-start;
     // height: 60vh !important;
     // width: 100% !important;
     // padding-top: 11% !important;
