--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -140,6 +140,7 @@
     display: flex;
     align-items: flex-end;
     overflow-y: hidden;
+    justify-content: flex-start;
   }
 
   #wave {
@@ -252,6 +253,7 @@
     display: flex;
     align-items: flex-end;
     overflow-y: hidden;
+    justify-content: flex-start;
   }
 
   #wave {
@@ -504,6 +506,7 @@ div .leftSideProjectDescription {
     display: flex;
     align-items: flex-end;
     overflow-y: hidden;
+    justify-content: flex-start;
   }
 
   #wave {
@@ -688,6 +691,7 @@ div.technologiesSection .column4 {
     display: flex;
     align-items: flex-end;
     overflow-y: hidden;
+    justify-content: flex-start;
   }
 
   #wave {
